Bug 131548 - Jumps within a sheet document by internal hyperlinks do not work properly
Summary: Jumps within a sheet document by internal hyperlinks do not work properly
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Android Viewer (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: ARM Android
: medium normal
Assignee: Ilhan Yesil
URL:
Whiteboard: target:7.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2020-03-24 20:08 UTC by Stefan_Lange_KA@T-Online.de
Modified: 2021-12-13 14:33 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
ods document to test the described behavior (same as for Bug 131450) (35.12 KB, application/vnd.oasis.opendocument.spreadsheet)
2020-03-25 15:19 UTC, Stefan_Lange_KA@T-Online.de
Details
Same as above with additional jumps to next/previous sheet (36.28 KB, application/vnd.oasis.opendocument.spreadsheet)
2021-12-13 14:33 UTC, Ilhan Yesil
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan_Lange_KA@T-Online.de 2020-03-24 20:08:44 UTC
Jumps within a sheet document by internal hyperlinks are executed properly only in the case the addressed cell or cell area is located in the displayed area of the same sheet or a comparable area of an other sheet.
The adressed cell or cell area is marked - if need after a change to the other sheet.
If the addressed cell (area) is loacated outside the displayed or an comparable area LO Viewer marks the addressed cell (area) - if need after change to the other sheet. But this cannot be seen, because LO Viewer doesn't shift the displayed area to the adressed cell (area).
The behavior can be tested with the attached ods document. There are hyperlinks in both sheets in cells B1 and B2, in sheet "Tabelle1" also in column O ("wo?)" and in sheet "Tabelle2" in column S ("woher?").

A hard problem is that further jumps especially to targets in an other sheet (of the same document) often result in freeze of LO Viewer.
Comment 1 ian 2020-03-25 14:18:18 UTC
Thank you for reporting the bug. Please attach the sample document referenced in your bug report, as this makes it easier for us to verify the bug. 

I have set the bug's status to 'NEEDINFO'. Please change it back to 'UNCONFIRMED' once the requested document is provided.
Comment 2 Stefan_Lange_KA@T-Online.de 2020-03-25 15:19:50 UTC
Created attachment 158993 [details]
ods document to test the described behavior (same as for Bug 131450)

Sorry, I wanted attach the file to the bug report, but something is gone wrong.
Comment 3 QA Administrators 2020-03-26 02:40:01 UTC Comment hidden (obsolete)
Comment 4 Michael Weghorn (away) 2020-03-26 14:11:34 UTC
I can confirm with a current master build as of commit 7de7512718ac192fcad441d5500d056316f72d72.

* open attached file
* make sure that cell A35 is not displayed on the screen (e.g. zoom in if necessary)
* click on "-->Ende" in cell B2

-> cell A35 is highlighted, but you only become aware when scrolling there manually.
Comment 5 Commit Notification 2021-09-03 09:46:27 UTC
Ilhan Yesil committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e72a7368b368a822d2400ee7db60312226ad3195

tdf#131548 Android: jump to cell

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Michael Weghorn (away) 2021-09-03 10:00:31 UTC
Successfully tested that it works now with the commit in place.
Comment 7 Stefan_Lange_KA@T-Online.de 2021-09-08 11:00:47 UTC
I think the problem isn't solved (completely):
In the build installed with android_2021-09-03_18.04.23_LibreOfficeViewer-strippedUIEditing-debug.apk (Build ID 889014c) jumps within one section (sheet) are executed correctly (in my small test document!) and also jumps from sheet "Tabelle1" to a target in the sheet "Tabelle2".
But jumps by a link from sheet "Tabelle2" to a target in the sheet "Tabelle1" do not work - nothing happens!

In the build installed with android_2021-09-07_13.44.18_LibreOfficeViewer-strippedUIEditing-debug.apk (Build ID a19e8dd) the behavior is again as described in the bug report, means without the fix!
Comment 8 Ilhan Yesil 2021-12-13 14:29:20 UTC
I've tested this with the latest commit 16376cae68f4406ef9440bdcb7b9617de6a6f998 and can not confirm this problem. I've attached a document with "nSeite" at cell D1 to jump to next "Tabelle2" and "vSeite" to jump back to "Tabelle1".
Comment 9 Ilhan Yesil 2021-12-13 14:33:47 UTC
Created attachment 176904 [details]
Same as above with additional jumps to next/previous sheet